# simulation

./: Cargo.toml  README.md
.cargo/: config.toml
engine/: Cargo.toml
engine/src/: activations.rs  lib.rs  nn.rs  sim.rs
engine/src/nn/: mod.rs  mutate.rs  reproduce.rs  util.rs
macros/: Cargo.toml
macros/src/: lib.rs
sim/: Cargo.toml
sim/src/: inputs.rs  main.rs  outputs.rs
sim/src/main_menu/: mod.rs
sim/src/net/: mod.rs  resources.rs  systems.rs
sim/src/sim/: mod.rs  resources.rs  sim.rs  systems.rs
test-engine/: Cargo.toml
test-engine/src/: inputs.rs  main.rs  outputs.rs
visualize-nn/: Cargo.toml
visualize-nn/src/: inputs.rs  main.rs
visualize-nn/src/main_menu/: mod.rs  systems.rs
visualize-nn/src/net/: mod.rs  resources.rs  systems.rs
visualize-nn/src/sim/: mod.rs  resources.rs  systems.rs
