[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
dyn-clone = "1.0.16"
erased-serde = "0.4.1"
indexmap = "2.1.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.56"
