[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
dyn-clone = "1.0.16"
indexmap = "2.1.0"
rand = "0.8.5"
thiserror = "1.0.56"
macros = { path = "../macros" }
hashbrown = "0.14.3"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
typetag = "0.2.15"
