[package]
name = "visualize-nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_vector_shapes = "0.6.0"
engine = { path = "../engine" }
serde = { version = "1.0.195", features = ["derive"] }
macros = { path = "../macros" }
bevy_egui = "0.24.0"
egui_file = { git = "https://github.com/t348575/egui_file" }
bincode = "1.3.3"
