[package]
name = "visualize-nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy_vector_shapes = "0.7"
engine = { path = "../engine" }
serde = { version = "1.0.195", features = ["derive"] }
macros = { path = "../macros" }
bevy_egui = "0.25"
egui_file = { git = "https://github.com/t348575/egui_file", branch = "bevy_egui"}
bincode = "1.3.3"
rand = "0.8.5"
